# PriceofFreedom

./: .gitignore  README.md  complex_vsh.ipynb  gaunt.ipynb  gaunt_fft.ipynb  make_tetris_plots.ipynb  pyproject.toml  requirements.in  requirements.txt  simpler_vsh.py  symbolic_vector_spherical_harmonics.ipynb  tess_vsh.ipynb  tetris.ipynb  tetris.py  tetris_runs.sh  vector_spherical_harmonics.ipynb  vector_spherical_harmonics.py  vector_spherical_signal.py
benchmarking/: __main__.py  analysis.ipynb  benchmark_tp.py  cpu_processed.csv  nsight_processed.csv  sweep_nsight_tp.sh
benchmarking/csv/: flops_cpu.csv  flops_cpu_perf.csv  nsight_profiling.csv  nsight_profiling_A100.csv  nsight_profiling_RTX.csv  walltime_cpu.csv  walltime_cpu_camera_ready.csv  walltime_gpu_A100.csv  walltime_gpu_RTX.csv
benchmarking/nsight_profiles/: nsight_SIMO_CGTP-dense_1.csv  nsight_SIMO_CGTP-dense_2.csv  nsight_SIMO_CGTP-dense_3.csv  nsight_SISO_CGTP-dense_1.csv  nsight_SISO_CGTP-dense_2.csv  nsight_SISO_CGTP-dense_3.csv  nsight_SISO_CGTP-dense_4.csv  nsight_SISO_CGTP-dense_5.csv  nsight_SISO_CGTP-dense_6.csv  nsight_SISO_CGTP-dense_7.csv  nsight_SISO_CGTP-dense_8.csv
freedom.egg-info/: PKG-INFO  top_level.txt
notebooks/: gaunt_fft.ipynb  gaunt_test.ipynb  make_tetris_plots.ipynb  optimized_tp.ipynb
shell/: run_cpu_jax_timing.sh  run_cpu_timing.sh  run_gpu_jax_timing.sh  run_gpu_timing.sh  run_nsight_profiling.sh  run_nsight_profiling_jax.sh  run_profile.sh  run_tetris_experiment.sh  run_timing.sh
src/: __main__.py  input_pipeline.py  loss.py  qm9_notebook.ipynb  tensor_products.py  train.py  vector_spherical_harmonics.py
src/data/: md17.py  (+2 more)
tests/: test_equivariance.py  vector_spherical_harmonics_test.py
(+418 files in other folders)
