[project]
name = "priceoffreedom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chex>=0.1.88",
    "e3nn-jax>=0.20.7",
    "jax[cuda12]>=0.5.0",
    "jupyter>=1.1.1",
    "lovelyplots>=1.0.2",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "nvtx>=0.2.10",
    "pandas>=2.2.3",
]
